Fix: vignettes failing to build on CRAN
* Vignette builds were failing for CRAN on the R-devel version with the new gcc10 compiler
* Also failing builds on fedora, I am assuming it is for the same reason

--- a/vignettes/MM2S.Rnw
+++ b/vignettes/MM2S.Rnw
@@ -9,6 +9,7 @@
 \usepackage{graphicx}
 \usepackage{microtype}
 \usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage[latin1]{inputenc}
 \usepackage{geometry}
 \usepackage{authblk}
