--- a/vignettes/MM2S_FromRawData.Rnw
+++ b/vignettes/MM2S_FromRawData.Rnw
@@ -9,6 +9,7 @@
 \usepackage{graphicx}
 \usepackage{microtype}
 \usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage[latin1]{inputenc}
 \usepackage{geometry}
 \usepackage{authblk}
